# tax-calculator

./: .gitignore  pyproject.toml
data/: coingecko_cache.json  nbp_cache.json
docs/crypto-transactions/: 2022-2023-pre-poland-salary.txt  2022-fantom-salary.txt  2023-polygon-payments.txt  2023-salary-invoices.txt  2024-polygon-payments.txt  2024-salary-invoices.txt  2025-polygon-payments.txt  README.md  celsius-simplex-purchases.txt  coinbase-purchases.txt  config.json  crypto_wallet_tracker.py  discover_missing_wallets.py  exchange_normalizer.py  fifo_calculator.py  ftx-purchases.txt  generate_pit38_report.py  ironclad_loss_documentation.md  potential_wallet_candidates.md  wallets.txt
docs/dates/: important-dates.txt
docs/payments/: historia_payments_2025.csv  historia_payments_2026.csv
docs/plans/: crypto-tax-system-plan.md
docs/sessions/: 2026-03-20-tax-calculator-and-research.md  (+1 more)
docs/todo/: filing-summary.md  (+2 more)
outputs/: normalized_all_exchanges.csv  normalized_binance.csv  normalized_coinbase.csv  normalized_ftx.csv  normalized_kraken.csv  pit28_report_2025.md  pit36_report_2025.md  pit38_detail.json  pit38_report_2020.md  pit38_report_2021.md  pit38_report_2022.md  pit38_report_2023.md  pit38_report_2024.md  pit38_report_2025.md  pit38_results.json  pit38_summary_all.json  tax_events_all.csv
tests/: conftest.py  test_binance_normalizer.py  test_coinbase_normalizer.py  test_cost_pool.py  test_fifo.py  test_ftx_normalizer.py  test_kraken_normalizer.py  test_nbp.py  test_salary.py
web/: export_data.py  index.css  index.html  package-lock.json  package.json
(+155 files in other folders)
